src/objects/OpportunityPatner__c.object
<CustomObject>
    <fields>
        <fullName>AIT_Channel_Partner_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>AIT Channel Partner ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AIT__c</fullName>
        <formula>(IF(ISBLANK(Patner__r.Account_Number_Formula__c), &quot;No&quot;, &quot;Yes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_Channel_Partner_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>It is used as a Place holder for Partners ID of MSI SFDC.</description>
        <externalId>true</externalId>
        <label>EVM Channel Partner ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EVM__c</fullName>
        <formula>(IF(ISBLANK(Patner__r.MSI_E_Account__c), &quot;No&quot;, &quot;Yes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EVM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Channel Partners</relationshipLabel>
        <relationshipName>OpportunityPatners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partners</relationshipLabel>
        <relationshipName>OpportunityPatners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Channel Partner AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Distributor AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influence Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Channel Partner</label>
    <listViews>
        <fullName>AIT_Channel_Partner</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>AIT_Channel_Partner_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Patner__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AIT_Channel_Partner_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>AIT Channel Partner</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AIT_Channel_Partner_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Patner__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/9/2015 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Partner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>